RESOLVED FIXED 241852
[CSS Container Queries] rem units don't work in queries
https://bugs.webkit.org/show_bug.cgi?id=241852
Summary [CSS Container Queries] rem units don't work in queries
Antti Koivisto
Reported 2022-06-22 05:19:13 PDT
they don't
Attachments
Patch (3.36 KB, patch)
2022-06-22 05:23 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2022-06-22 05:23:55 PDT
EWS
Comment 2 2022-06-22 06:40:28 PDT
Committed r295729 (251734@main): <https://commits.webkit.org/251734@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460413 [details].
Radar WebKit Bug Importer
Comment 3 2022-06-22 06:41:12 PDT
Note You need to log in before you can comment on or make changes to this bug.