[CSS Container Queries] rem units don't work in queries https://bugs.webkit.org/show_bug.cgi?id=241852

Reviewed by Antoine Quint.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/font-relative-units-dynamic-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/font-relative-units-expected.txt:
* Source/WebCore/style/ContainerQueryEvaluator.cpp:
(WebCore::Style::ContainerQueryEvaluator::selectContainer const):

Correctly pass the document element style instead of the view style.

Canonical link: https://commits.webkit.org/251734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295729 268f45cc-cd09-0410-ab3c-d52691b4dbfc